@@ -375,6 +375,12 @@ namespace libtorrent
 			// buffers from.
 			boost::pool<> m_send_buffers;
 
+			// this is where all active sockets are stored.
+			// the selector can sleep while there's no activity on
+			// them
+			io_service m_io_service;
+			asio::strand m_strand;
+
 			// the file pool that all storages in this session's
 			// torrents uses. It sets a limit on the number of
 			// open files by this session.
@@ -388,12 +394,6 @@ namespace libtorrent
 			// pool, and must be destructed before this
 			// object.
 			disk_io_thread m_disk_thread;
-
-			// this is where all active sockets are stored.
-			// the selector can sleep while there's no activity on
-			// them
-			io_service m_io_service;
-			asio::strand m_strand;
 
 			// this is a list of half-open tcp connections
 			// (only outgoing connections)
@@ -646,7 +646,7 @@ namespace libtorrent
 			
 			void debug_log(const std::string& line)
 			{
-				(*m_ses.m_logger) << time_now_string() << " " << line << "\n";
+				(*m_ses.m_logger) << line << "\n";
 			}
 			session_impl& m_ses;
 		};
