@@ -56,7 +56,6 @@ public:
 	void done(int ticket);
 	void limit(int limit);
 	int limit() const;
-	void close();
 
 #ifndef NDEBUG
 
