@@ -74,8 +74,6 @@ namespace libtorrent
 			, boost::weak_ptr<request_callback> c
 			, session_settings const& stn);
 
-		void close();
-
 	private:
 
 		enum action_t
