@@ -547,8 +547,8 @@ namespace detail
 		, fingerprint const& cl_fprint
 		, char const* listen_interface)
 		: m_send_buffers(send_buffer_size)
-		, m_files(40)
 		, m_strand(m_io_service)
+		, m_files(40)
 		, m_half_open(m_io_service)
 		, m_download_channel(m_io_service, peer_connection::download_channel)
 		, m_upload_channel(m_io_service, peer_connection::upload_channel)
@@ -675,17 +675,6 @@ namespace detail
 		if (m_dht) m_dht->stop();
 #endif
 		m_timer.cancel();
-
-		// close the listen sockets
-		for (std::list<listen_socket_t>::iterator i = m_listen_sockets.begin()
-			, end(m_listen_sockets.end()); i != end; ++i)
-		{
-			i->sock->close();
-		}
-
-#if defined(TORRENT_VERBOSE_LOGGING) || defined(TORRENT_LOGGING)
-		(*m_logger) << time_now_string() << " aborting all torrents\n";
-#endif
 		// abort all torrents
 		for (torrent_map::iterator i = m_torrents.begin()
 			, end(m_torrents.end()); i != end; ++i)
@@ -693,25 +682,7 @@ namespace detail
 			i->second->abort();
 		}
 
-#if defined(TORRENT_VERBOSE_LOGGING) || defined(TORRENT_LOGGING)
-		(*m_logger) << time_now_string() << " aborting all connections\n";
-#endif
-		// abort all connections
-		for (connection_map::iterator i = m_connections.begin()
-			, end(m_connections.end()); i != end; ++i)
-		{
-			i->second->disconnect();
-		}
-		
-#if defined(TORRENT_VERBOSE_LOGGING) || defined(TORRENT_LOGGING)
-		(*m_logger) << time_now_string() << " aborting all tracker requests\n";
-#endif
-		m_tracker_manager.abort_all_requests();
-
-#if defined(TORRENT_VERBOSE_LOGGING) || defined(TORRENT_LOGGING)
-		(*m_logger) << time_now_string() << " shutting down connection queue\n";
-#endif
-		m_half_open.close();
+		m_io_service.stop(); 
 
 		mutex::scoped_lock l2(m_checker_impl.m_mutex);
 		// abort the checker thread
@@ -1514,12 +1485,20 @@ namespace detail
 		while (!m_abort);
 
 		deadline_timer tracker_timer(m_io_service);
+		// this will remove the port mappings
+		if (m_natpmp.get())
+			m_natpmp->close();
+		if (m_upnp.get())
+			m_upnp->close();
 
 #if defined(TORRENT_VERBOSE_LOGGING) || defined(TORRENT_LOGGING)
 		(*m_logger) << time_now_string() << " locking mutex\n";
 #endif
 		session_impl::mutex_t::scoped_lock l(m_mutex);
 
+#if defined(TORRENT_VERBOSE_LOGGING) || defined(TORRENT_LOGGING)
+		(*m_logger) << time_now_string() << " aborting all tracker requests\n";
+#endif
 		m_tracker_manager.abort_all_requests();
 #if defined(TORRENT_VERBOSE_LOGGING) || defined(TORRENT_LOGGING)
 		(*m_logger) << time_now_string() << " sending stopped to all torrent's trackers\n";
@@ -2122,8 +2101,8 @@ namespace detail
 
 	entry session_impl::dht_state() const
 	{
+		TORRENT_ASSERT(m_dht);
 		mutex_t::scoped_lock l(m_mutex);
-		if (!m_dht) return entry();
 		return m_dht->state();
 	}
 
@@ -2159,10 +2138,16 @@ namespace detail
 
 	session_impl::~session_impl()
 	{
+		abort();
+
 #if defined(TORRENT_VERBOSE_LOGGING) || defined(TORRENT_LOGGING)
 		(*m_logger) << time_now_string() << "\n\n *** shutting down session *** \n\n";
 #endif
-		abort();
+		// lock the main thread and abort it
+		mutex_t::scoped_lock l(m_mutex);
+		m_abort = true;
+		m_io_service.stop();
+		l.unlock();
 
 #if defined(TORRENT_VERBOSE_LOGGING) || defined(TORRENT_LOGGING)
 		(*m_logger) << time_now_string() << " waiting for main thread\n";
